evolution-service/deployment/infrastructure/namespace.yaml
# Defines the characteristics for the "es" Kubernetes namespace
apiVersion: v1
kind: Namespace
metadata:
  name: es
  labels:
    name: es
    istio-injection: enabled
