evolution-service/deployment/infrastructure/honey.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: honeycomb-opentracing-proxy
  namespace: default
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: honeycomb-opentracing-proxy
    spec:
      containers:
      - name: honeycomb-opentracing-proxy
        image: honeycombio/honeycomb-opentracing-proxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9411
        args:
          - -d
          - traces
          - -k
          - "$(HONEYCOMB_WRITEKEY)"
          - --debug
          # To also send spans to a Zipkin collector listening at
          # zipkin.default:9411, uncomment the following lines:
          # - --downstream
          # - zipkin.default:9411
---
apiVersion: v1
kind: Service
metadata:
  name: honeycomb-opentracing-proxy
  labels:
    app: honeycomb-opentracing-proxy
  namespace: default
spec:
  ports:
  - name: honeycomb-opentracing-proxy
    port: 9411
    targetPort: 9411
  selector:
    app: honeycomb-opentracing-proxy
