evolution-service/deployment/infrastructure/service.yaml
# VirtualService for V2
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-esp-virtual-service
spec:
  gateways:
  - ingress-gateway
  hosts:
  - "*"
  http:
    - match:
        - headers:
            service_select:
              exact: green
      route:
        - destination:
            host: esp
            subset: green
    - match:
        - headers:
            service_select:
              exact: blue
      route:
        - destination:
            host: esp
            subset: blue
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: esp
          subset: blue
---
# DestinationRule for V2 blue and green
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: esp
spec:
  host: esp
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
# Kubernetes Service for V2
apiVersion: v1
kind: Service
metadata:
  name: esp
spec:
  ports:
  - port: 50051
    name: grpc-exp
    targetPort: 50051
  selector:
    app: esp
